--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,12 +10,33 @@ html {
 
 .body {
     font-family: 'Lato', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
-    margin: 200px;
+    max-width: 800px;
+    padding: 20px;
+    width: 100%;
+    margin: auto;
+    background-color: #eee;
 }
 
-.container {
+@media (max-width: 767px) {
+    .body {
+        width: 100%;
+    }
+}
+
+.form {
     display: grid;
+    grid-template-rows: 1fr;
+    border: 2px solid #cac6c6;
+    background-color: hsl(0, 100%, 99%);
 
 
+}
+
+.ToDoList {
+    display: inline-block;
+    border: 2px solid #cac6c6;
+    background-color: hsl(0, 100%, 99%);
+    padding: 17px;
+    width: 100%;
+    font-weight: bold;
 }
