--- a/CSS/list.css
+++ b/CSS/list.css
@@ -1,3 +1,20 @@
+.list {
+    display: inline-block;
+    border: 2px solid #cac6c6;
+    background-color: hsl(0, 100%, 99%);
+    padding: 17px;
+    width: 100%;
+}
+
 .list__item {
     list-style: none;
+    text-decoration: none;
+    height: 30px;
+    padding: 10px;
+    margin: 10px;
+
+}
+
+.list__item--modifier {
+    padding: 20px;
 }
