--- a/CSS/form.css
+++ b/CSS/form.css
@@ -11,8 +11,8 @@
     height: 30px;
     padding: 10px;
     margin: 10px;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
 
 }
 
@@ -35,7 +35,7 @@
 
 .form__button {
     width: 20%;
-    max-width: 140px;
+    max-width: 150px;
     margin: 10px;
     padding: 10px;
     background-color: teal;
