--- a/CSS/list.css
+++ b/CSS/list.css
@@ -8,13 +8,12 @@
 }
 
 .list__header {
-    padding: 10px;
-    border-bottom: solid 2px;
-    border-bottom-color: #eee;
-    margin: 0;
-    text-align: start;
-    text-align: left;
-
+    background-color: white;
+    border-bottom: 2px solid #eee;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px;
+    margin: 0px;
 }
 
 .list__item {
