Changed color .taskList__button--done

--- a/CSS/taskList.css
+++ b/CSS/taskList.css
@@ -27,7 +27,7 @@
 }
 
 .taskList__button--done {
-    background-color: hsl(125, 62%, 50%, 1);
+    background-color: hsl(125, 62%, 25%);
 }
 
 .taskList__button--done:hover {
