--- a/CSS/list.css
+++ b/CSS/list.css
@@ -8,7 +8,7 @@
 }
 
 .list__header {
-    background-color: white;
+    background-color: hsl(0, 100%, 99%);
     border-bottom: 2px solid #eee;
     font-size: 20px;
     font-weight: bold;
