--- a/CSS/tasks.css
+++ b/CSS/tasks.css
@@ -20,7 +20,7 @@
 .tasks__button {
     width: 30px;
     height: 30px;
-    background-color: white;
+    color: white;
     border: none;
     padding: 0;
     margin: 10px;
