--- a/CSS/section.css
+++ b/CSS/section.css
@@ -4,10 +4,25 @@
 }
 
 .section__header {
+    border-bottom: 1px solid #ddd;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    justify-content: space-between;
+    align-items: center;
     font-size: 20px;
     padding: 20px;
+}
+
+@media (max-width: 767px) {
+    .section__header {
+        grid-template-columns: 1fr;
+    }
+}
+
+.section__tittle {
+    font-size: 20px;
     margin: 0;
-    border-bottom: 1px solid #ddd;
 }
 
 .section__body {
