--- a/CSS/buttons.css
+++ b/CSS/buttons.css
@@ -1,15 +1,16 @@
 .buttons {
     display: flex;
     flex-wrap: wrap;
+    font-size: 15px;
 }
 
 .buttons__button {
+    background-color: transparent;
+    color: hsl(180, 100%, 25%);
     border: none;
-    background-color: white;
-    color: teal;
-    font-size: 15px;
-    transition: 0.5s;
-    cursor: pointer;
+    margin: 0 0 0 20px;
+    transition: 0.3s;
+
 }
 
 @media (max-width: 767px) {
@@ -24,5 +25,5 @@
 }
 
 .buttons__button:disabled {
-    color: #ddd;
+    color: #ccc;
 }
